# Clicker

./: CMakeLists.txt  HISTORY.md  README.md
src/: auto.cpp  main.cpp
src/headers/: auto.hpp
